src/components/Layouts/ReportLayout.less
@import (reference) "../../css/variables";

* {
  font-family: @font-family-base;
}

body {
  color: @font-color-base;
  font-family: @font-family-base !important;
}

.footer {
  font-family: @font-family-base !important;
}
strong {
  font-family: @font-family-source-sans-pro-semi-bold;
}

h1 {
  font-family: @font-family-base !important;
}

.report-layout {
  margin: @content-margin-top @content-margin-right @content-margin-bottom @content-margin-left;
  .report-row {
    display: table;
    width: 100%;
    table-layout: fixed;
    border-spacing: 10px;
    padding: 0 17px;
    &.header, &.logo {
      padding: 0 !important;
    }
  }
  .report-section {
    display: table-cell;
    .section-header {
      padding: 8px 15px;
      margin-top: 5px;
      font-weight: normal;
      background-color: #ebebec;
    }
  }
  .react-grid-item {
    overflow: hidden;
    transition: none;
    z-index: 1;
  }
}

